# libcat

./: CMakeLists.txt  README.md
include/: all.h  any.h  asset  box.h  cat  cat.h  cell  expected.h  expected_monad.h  fn.h  function_monad.h  lazy.h  link.h  lnk  lnk.h  lzy.h  maybe  mnd.h  monad.h  never  opt.h  optional_monad.h  owned  rc.h  rwlock  safe.h  shared  tup.h  unit  var.h  vec.h  vector_monad.h  wk.h
tests/: CMakeLists.txt  tests.cpp
